--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	<a href="http://thematicmapping.org/" class="tm">
 		<img src="http://earthatlas.info/img/thematicmapping.png">
 	</a>
-	<script src="js/three.min.js"></script>
-	<script src="js/Detector.js"></script>		
-	<script src="js/TrackballControls.js"></script>		
-	<script src="js/earth.js"></script>  
+	<!--<script src="js/three.min.js"></script>-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
+	<script src="js/Detector.js"></script>
+	<script src="js/TrackballControls.js"></script>
+	<script src="js/earth.js"></script>
 </body>
 </html>
