--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </style>
 </head>
 <body>
-	<div id="webgl"></div>
+	<div id="webgl" style="width:100%; float:left; border-right: 2px solid white"></div>
+	<!--<div id="questions" style="width:25%; float:right; border-left: 2px solid white;"></div>-->
+
 	<a href="http://thematicmapping.org/" class="tm">
 		<img src="http://earthatlas.info/img/thematicmapping.png">
 	</a>
