Angle working - broken lat/long/mapping

--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
 </head>
 <body>
 
-	<div id="webgl" style="width:73%; height:50%; float:left; border-right: 2px solid white;"></div>
-	<div id="questions" style="width:25%; height:100%; float: right; border-left: 2px solid white;border-bottom: 2px solid white;">
+	<div id="webgl" style="z-index:25; position:relative; width:73%; height:50%; float:left; border-right: 2px solid white;"></div>
+	<div id="questions" style="position:relative; width:25%; height:100%; float: right; border-left: 2px solid white;border-bottom: 2px solid white;">
 		<p id="log" style="margin:5px;">Select two cities on the globe</p>
 	</div>
-	<div id="map" style="width:75%; height:50%; float: bottom; border-top: 2px solid white;">
-		<img src="images/2_no_clouds_4k.jpg" style="width:99.5%;height:99.5%">
+	<div id="map333" style="position:relative; width:75%; height:50%; float: bottom; border-top: 2px solid white;">
+		<canvas id="mapCanvas" style="z-index:20; position:absolute; top:100%; left:0;"></canvas>
+		<img src="images/2_no_clouds_4k.jpg" style="width:99.5%;height:99.5%;z-index:1; position:absolute; top:100%; left:0;">
 	</div>
 
 
-	<a href="http://thematicmapping.org/" class="tm">
-		<img src="http://earthatlas.info/img/thematicmapping.png">
-	</a>
+	<!-- Image provided by: http://thematicmapping.org/ -->
 	<!--<script src="js/three.min.js"></script>-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
 	<script src="js/Detector.js"></script>
