--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WebGL Earth</title>
+	<title>Arcs on Earth</title>
 	<style>
 		body { margin: 0; overflow: hidden; background-color: #000; color: white; }
 		.tm  { position: absolute; top: 10px; right: 10px; }
